[package]
name = "fips"
authors = ["Robert Jacobson <RJacobson@cdc.gov>"]
description = "A library for efficiently working with FIPS region codes"
version = "0.1.0"
edition = "2024"

[features]
default = ["aspr_archive"]

## Support for working with the ASPR Synthetic Population dataset # Parsing ASPR codes
aspr_archive = ["zip", "once_cell"] # Reading ASPR Synthetic Population files from ZIP archives

[dependencies]
## Dependencies for "aspr_archive"
zip       = { version = "2.6.1",  optional = true }
once_cell = { version = "1.21.3", optional = true }

