[workspace]
resolver = "2"
members = [
    "ixa-aspr"
]

[workspace.package]
edition = "2024"
repository = "https://github.com/CDCgov/ixa"
license = "Apache-2.0"
homepage = "https://github.com/CDCgov/ixa"


[workspace.dependencies]
## Workspace members
ixa-aspr = { path = "ixa-aspr" }
ixa-fips = { path = "." }

## For the USState enum
strum = { version = "0.28", features = ["derive"] }

## Dependencies for "aspr_archive"
zip = "8.2.0"
once_cell = "1"
ouroboros = "0.18.5"

[workspace.lints.rust]
mismatched_lifetime_syntaxes = "allow"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
implicit_hasher = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module-name-repetitions = "allow"
uninlined_format_args = "allow"


[package]
name = "ixa-fips"
description = "A library for efficiently working with FIPS region codes"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
strum.workspace = true

[lints]
workspace = true
