[package]
name = "ixa-aspr"
description = "A library for reading ASPR synthetic population data"
edition.workspace = true
license.workspace = true


[features]
default = ["aspr_archive"]

# Runs tests that assume the exisstence of ASPR Synthetic Population files from ZIP archives
aspr_tests = ["aspr_dataset_tests", "aspr_zip_tests"]
# Just (unzipped) dataset tests
aspr_dataset_tests = ["aspr_archive"]
# Just zipped dataset tests
aspr_zip_tests = ["aspr_archive"]

# Reading ASPR Synthetic Population files from ZIP archives
aspr_archive = ["zip", "once_cell", "ouroboros"]

[dependencies]
ixa-fips.workspace = true

## Dependencies for "aspr_archive"
zip = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
ouroboros = { workspace = true, optional = true }

[lints]
workspace = true
